--- a/flight-booking-website/src/styles/Footer.css
+++ b/flight-booking-website/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    width: 100%;
-    height: 200px;
+    /* width: 100%;
+    height: 200px; */
     background-color: var(--background);
     color: var(--text);
     display: flex;
@@ -23,4 +23,7 @@
   
   .footer p {
     color: var(--text);
+    &:hover {
+      color: var(--accent);
+    }
   }
