--- a/flight-booking-website/src/styles/Home.css
+++ b/flight-booking-website/src/styles/Home.css
@@ -5,8 +5,11 @@
 .InputBase input , .InputBase .menuitem{    
     background-color: var(--white) !important;
     color: var(--black) !important;
-    
-}
+    /* width: 100% !important;
+    display: flex !important;
+    flex-grow: 1 !important; */
+} 
+
 
 
 .InputBase input::placeholder{
@@ -35,4 +38,27 @@ label{
 .MuiSelect-select.MuiSelect-select{
     background-color: var(--white) !important;
     color: var(--black) !important;
+    justify-content: center !important;
+    align-items: center !important;
+    display: flex !important;
+    flex-grow: 1 !important;
+    
+}
+
+.search_button{
+    background-color: var(--primary-button) !important;
+    color: black !important;
+    &:hover{
+        background-color: var(--secondary-button) !important;
+        color: var(--text) !important;
+    }
+}
+
+/* .MuiGrid-spacing-xs-2{
+    width: 100% !important;
+    margin-left: 0% !important;
+} */
+
+.root{
+    flex-grow: 1 !important;
 }
